<resources>
    <string name="app_name">RoBandWiki</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="robandwiki">RoBandWiki</string>
    <string name="re_enter_your_pass">Re-enter tour password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_pass">Enter your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="switch_to_sign_up">Switch To Sign Up</string>
    <string name="powered_by_rock_monsters_romania">Powered by Rock Monsters Romania</string>
    <string name="switch_to_login">Switch to Login</string>
    <string name="explore_now">Explore Now!</string>
    <string name="our_recommendation">Our Recommendation</string>
    <string name="hello_user">Hello, User!</string>
    <string name="logout">Sign Out</string>
    <string name="rock_on">Rock On!</string>
    <string name="default_notification_channel_id">com.example.robandwiki</string>
    <string name="google_default_web_client_id" translatable="false">967360308178-utjgakkt9oj5h2rnmcgf0v3j3ci6tqfl.apps.googleusercontent.com</string>
    <string name="rock_la_mures_2023">Rock La Mures 2023</string>
    <string name="sign_up_to_robandwiki">Sign Up To RoBandWiki</string>
    <string name="thank_you_for_choosing_robandwiki">Thank you for choosing RoBandWiki</string>
    <string name="contact_us">Contact Us</string>
    <string name="band_name">Band Name:</string>
    <string name="e_an_na">E-an-na</string>
    <string name="band_genre">Band Genre:</string>
    <string name="folk_metal">Folk-Metal</string>
    <string name="band_location">Band Location:</string>
    <string name="sibiu">Sibiu</string>
</resources>