<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/band_name"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvbandName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_an_na"
                android:textSize="20sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/band_genre"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvbandGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/folk_metal"
                android:textSize="20sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/band_location"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvbandLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sibiu"
                android:textSize="20sp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:padding="8dp"
            android:src="@drawable/share_icon"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>


</androidx.cardview.widget.CardView>
