<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".fragments.ProfileFragment">

    <TextView
        android:id="@+id/textViewProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_user"
        android:textColor="#B71C1C"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#B71C1C"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:id="@+id/textViewRockOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rock_on"
        android:textColor="#B71C1C"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="#FFFFFF"
        android:backgroundTint="#B71C1C"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"/>



</FrameLayout>