<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".fragments.SignUpFragment">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_to_robandwiki"
        android:textSize="24sp"
        android:textColor="#B71C1C"
        android:layout_gravity="center_horizontal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#B71C1C"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >



        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_centerHorizontal="true"
            />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/email_edit_text"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            />


        <Button
            android:id="@+id/signup_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/password_edit_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:text="@string/sign_up"
            android:backgroundTint="@color/rm_red"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/switch_to_login_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/switch_to_login"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/rm_red"/>

    </RelativeLayout>

</FrameLayout>
